# parma_light

./: .gitignore  README.md  admin-help.txt  admin.sh  audit.json  hashes.json  licenses.json  licenses.md  parma_light.toml  pl.toml  pyproject.toml
.github/workflows/: docker.yml  pytest.yml
docker/: Dockerfile  nix_tester.sh  parma_light.toml  run.sh
example/sklearn/: demo.txt
initdata/: user.json
resources/: APIDOC.md  RATIONALE.md
src/parma/: backend.py  frontend_cli.py
src/parma/component/: data.py  node.py  run.py  user.py  workflow.py
src/parma/intern/: database.py  dbc.py  helper.py  msg.py  read_user_cmd.py  schema-def-for-user-commands.json  view.py
src/parma/later/: fileOrganizer.py  frontend_cli.html  hash_tree.py
src/parma/later/rest_frontend/: frontend.html  scripts.js  styles.css
src/parma_light.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/container/array/concat/: Dockerfile  concat.sh
test/container/array/cut/: Dockerfile  cut.py
test/container/array/gen_bash/: Dockerfile  gen_array.sh
test/container/array/gen_python/: Dockerfile  gen_array.py
test/container/array/gen_r/: Dockerfile  gen_array.R
test/container/array/join/: Dockerfile  join.py
test/container/directory/copy/: Dockerfile  copy.sh
test/container/directory/join/: Dockerfile  join.sh
test/container/sklearn/: README.md
test/container/sklearn/metric/: Dockerfile  sklearn_compute_metric.py
test/container/sklearn/predict/: Dockerfile  (+1 more)
test/test_cmds/array/: process_array.txt  process_array_with_subworkflow.txt
test/test_cmds/bash/: gen_string.sh  process_bash.txt  repeat_string.sh
test/test_cmds/directory/: demo.txt
test/test_cmds/nix/: process_nix.txt
test/test_cmds/sklearn/: data.txt  node.txt  run.txt  user.txt  workflow.txt  workflowsub_and_run.txt
test/unit_test/: test_split.py  test_store.py  test_validate.py
(+4 files in other folders)
