[project]
name = "parma-light"
version = "0.1.0"
description = "A demonstrator of the PARMA concept"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "debugpy>=1.8.17",
    "flask>=3.1.1",
    "jsonschema>=4.23.0",
    "liccheck>=0.9.2",
    "numpy>=2.0.2",
    "pip-audit>=2.9.0",
    "pip-licenses>=5.0.0",
    "pytest>=8.4.1",
    "python-on-whales>=0.76.1",
    "requests>=2.32.4",
    "scikit-learn>=1.6.1",
    "toml>=0.10.2",
    "waitress>=3.0.2",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test"
]
pythonpath = [
  "./src/parma"
]

[tool.liccheck]
authorized_licenses = [
    "bsd",
    "new bsd",
    "bsd license",
    "new bsd license",
    "simplified bsd",
    "apache",
    "apache 2.0",
    "apache software license",
    "gnu lgpl",
    "lgpl with exceptions or zpl",
    "isc license",
    "isc license (iscl)",
    "mit",
    "mit license",
    "python software foundation license",
    "zpl 2.1",
]
unauthorized_licenses = [
    '\bgpl'
]
as_regex = true
level = "STANDARD"
reporting_txt_file = "liccheck_reporting.txt"
dependencies = true # to load [project.dependencies]
optional_dependencies = [] # to load extras from [project.optional-dependencies]

[tool.liccheck.authorized_packages]
uuid = "1.30"
